@@ -1,3 +1,7 @@
+2021-11-09  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/models_first_person_maze.rb: Added
+
 2021-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/raylib_opengl_interop.rb: Added
